---- Changes since 3.88 ----
Updated the phpMyAdmin script installer to version 3.4.7.1, SMF to 2.0.1, bbPress to 1.1, SugarCRM to 6.3.0, Joomla to 1.7.3 and 1.5.25, phpMyFAQ to 2.7.1, phpPgAdmin to 5.0.3, ZenPhoto to 1.4.1.6, Moodle to 2.1.3, PiWik to 1.6, Magento to 1.6.1.0, CMS Made Simple to 1.10.2, Drupal to 7.9, OpenX to 2.8.8, eGroupWare to 1.8.002.20111111, vTigerCRM to 5.3.0, and PHPList to 2.10.17.
When creating or restoring a virtual server with a database that already exists, you now have the option to simply associate that database with the server rather than causing the server creation to fail.
The list of sub-servers under a top-level server has been moved from the Edit Virtual Server page to the List Sub-Servers link on the left menu.
Added the --skip-warnings flag to the modify-domain API command, to ignore warnings related to new features from a plan change.
MySQL connection limits for domain owners and mailboxes can now be set at the template level, and will be applied to new virtual servers and mail users with database access.
When the email feature is disabled for a domain, all mail aliases are now removed and saved by Virtualmin. If email is later re-enabled, aliases will be restored.
Expanded the Virtualmin plugin API to allow a plugin to replace the core Apache website feature, for example with Nginx.
Backups now include the Dovecot control files of users when they are stored outside the home directory, so that message UIDs are preserved when the domain is restored on another system.
The post-installation wizard now prompts for you to select a MySQL configuration size appropriate for the available memory on your system, and applies it to /etc/my.cnf.
---- Changes since 3.89 ----
Updated the phpMyAdmin script installer to version 3.4.8, and MoinMoin to 1.8.9.